--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
     markdown,
     rslab (>= 0.0.0.9000),
     shiny,
-    bslib
+    bslib,
+    fontawesome
 Remotes: 
     Lightbridge-KS/rslab
